fixed the overflow problem and adjusted the position of buttons in practice

--- a/components/parent/Parent.module.scss
+++ b/components/parent/Parent.module.scss
@@ -25,7 +25,7 @@
 			top: 70px;
 			height: calc(100vh - 70px);
 			width: 100%;
-			overflow-y: hidden;
+			overflow-y: scroll;
 		}
 	}
 }
