--- a/components/sidebar/Sidebar.module.scss
+++ b/components/sidebar/Sidebar.module.scss
@@ -62,7 +62,7 @@
 	.sidebar {
 		width: 100%;
 		z-index: 3;
-		top: 10vh;
+		top: 70px;
 		height: 00vh;
 		display: flex;
 		justify-content: center;
