--- a/styles/practice/start.module.scss
+++ b/styles/practice/start.module.scss
@@ -48,12 +48,13 @@
 		flex-direction: column;
 		justify-content: flex-start;
 		align-items: center;
+		border: 1px solid #c0c0c0;
+		padding-top: 20px;
 		.options {
-			margin-top: 20px;
+			// margin-top: 20px;
 			display:flex;
 			flex-direction: row;
 			width: 50vw;
-			border: 1px solid #c0c0c0;
 			flex-flow: row;
 			flex-wrap: wrap;
 			padding: 30px 10px 20px 20px;
@@ -90,7 +91,7 @@
 			width: 100vw;
 			height: fit-content;
 			h1 {
-				font-size: 24px;
+				font-size: 28px;
 				text-align: center;
 			}
 			.options {
